<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_activity_header_container_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/main_activity_image_view"
            android:src="@drawable/nfc_logo"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/main_activity_app_image_view_content_description" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_activity_data_section_button"
            android:text="@string/main_activity_enter_data_button_text"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/buttonBackgroundTint"
            android:textColor="@color/buttonTextColor"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/main_activity_image_view"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_activity_enter_data_layout"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/main_activity_data_section_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_activity_edit_area_input_hint_text_view"
                android:singleLine="false"
                android:textColor="@color/inputHintColor"
                android:layout_marginTop="20dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:text="@string/main_activity_edit_area_input_hint"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/main_activity_name_edit_text"
                android:hint="@string/main_activity_name_hint"
                android:textSize="18sp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="20dp"
                android:maxLines="4"
                android:minHeight="48dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_activity_edit_area_input_hint_text_view"
                android:autofillHints="none"
                android:inputType="textMultiLine" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/main_activity_send_now_button"
                android:text="@string/main_activity_send_now_button_text"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_activity_name_edit_text" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/main_activity_edit_area_separator"
                android:background="@color/separatorColor"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_activity_send_now_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/main_activity_notification_text_view"
        android:text="@string/main_activity_initial_text_content"
        android:textColor="@color/notificationTextColor_Success"
        android:textSize="24sp"
        android:singleLine="false"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_activity_header_container_layout"
        app:layout_constraintBottom_toTopOf="@id/main_activity_connection_status_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/main_activity_connection_status_layout"
        android:minHeight="100dp"
        android:layout_margin="10dp"
        android:background="@drawable/connection_state_layout_disconnected_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/main_activity_connection_status_text_view"
            android:textAlignment="center"
            android:textSize="28sp"
            android:textColor="@color/black"
            android:text="@string/main_activity_connection_status_disconnected_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>